[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/button/border_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://menu/credit-menu/ui/ui.gd" type="Script" id=2]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 100 )

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 100 )
color = Color( 0, 0, 0, 0.866667 )

[node name="holder" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_right = 300.0
size_flags_horizontal = 3
alignment = 1

[node name="main_menu" parent="CanvasLayer/Control" instance=ExtResource( 1 )]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -125.0
margin_top = -180.0
margin_right = 125.0
margin_bottom = -100.0
rect_min_size = Vector2( 250, 80 )
button_label = "Main Menu"

[node name="Timer2" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="CanvasLayer/Control/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
